@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SED "1" "January 2009" "sed version 4.1e" "User Commands"
+.TH SED "1" "February 2009" "sed version 4.1e" "User Commands"
 .SH NAME
 sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
@@ -73,7 +73,9 @@ non-option argument is taken as the sed script to interpret.  All
 remaining arguments are names of input files; if no input files are
 specified, then the standard input is read.
 .PP
-E-mail bug reports to: bonzini@gnu.org .
+GNU sed home page: <http://www.gnu.org/software/sed/>.
+General help using GNU software: <http://www.gnu.org/gethelp/>.
+E-mail bug reports to: <bonzini@gnu.org>.
 Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
 .SH "COMMAND SYNOPSIS"
 This is just a brief synopsis of \*(sd commands to serve as
