@@ -4,5 +4,7 @@ This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
 to the extent permitted by law.
 
-E-mail bug reports to: bonzini@gnu.org .
+GNU sed home page: <http://www.gnu.org/software/sed/>.
+General help using GNU software: <http://www.gnu.org/gethelp/>.
+E-mail bug reports to: <bonzini@gnu.org>.
 Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
